# CrewAI

./: pyproject.toml
src/: .env  crew.py
src/config/: agents.yaml  task.yaml
